add transformers in skaffold.yaml

--- a/skaffold-kpt-example/skaffold.yaml
+++ b/skaffold-kpt-example/skaffold.yaml
@@ -7,7 +7,11 @@ manifests:
   rawYaml:
     - deployment.yaml
     - svc.yaml
+  transform:
+  - name: set-labels
+    configMap:
+     - "env: dev"
 deploy:
-  kpt:
-    dir: kpt-hydration
+  kpt: {}
+
 
